<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="instructions_title">Setup Instructions</string>
    <string name="instructions_message">Starting GoIV for the first time:\n\nEnter your trainer info.\n\nPress the GRANT PERMISSION button and accept all prompts.\n\nPress start.</string>
    <string name="goiv_is_open_source">GoIV is open source!</string>
    <string name="trainer_info">Trainer Info</string>
    <string name="trainer_level">Level</string>
    <string name="trainer_team">Team</string>
    <string name="notice">Notice</string>
    <string-array name="teams">
        <item name="mystic">"Mystic"</item>
        <item name="valor">"Valor"</item>
        <item name="instinct">"Instinct"</item>
    </string-array>
    <string name="menu_recalibration">Recalibration</string>
    <string name="menu_home">Home</string>
    <string name="menu_clipboard">Clipboard</string>
    <string name="pokemon_name">Species:</string>
    <string name="cp">CP</string>
    <string name="hp">HP</string>
    <string name="use_the_slider_below_to_align_the_arc">Use the slider below to align the arc:</string>
    <string name="cancel">Cancel</string>
    <string name="check_iv">Check IV</string>
    <string name="notification_title">GoIV Running - Level %1$d</string>
    <string name="notification_title_short">GoIV - Lvl %1$d</string>
    <string name="notification_title_goiv_stopped">GoIV stopped</string>
    <string name="notification_title_tap_to_open">Tap to open GoIV.</string>
    <string name="notification_channel">GoIV status</string>
    <string name="close">Close</string>
    <string name="main_permission">Grant Permissions</string>
    <string name="main_start">Start</string>
    <string name="main_starting">Starting…</string>
    <string name="main_stop">Stop</string>
    <string name="back">Back</string>
    <string name="accept_screen_capture">Accept screen capture</string>
    <string name="settings_page_title">Settings</string>
    <string name="launch_pokemon_go_setting_title">Auto launch the game</string>
    <string name="launch_pokemon_go_setting_summary">Launch the game when GoIV is started</string>
    <string name="confirmation_dialog_setting_title">Enable scan correction dialog</string>
    <string name="confirmation_dialog_setting_summary">Show a screen which allows you to manually edit the scanned information before showing results</string>
    <string name="manual_screenshot_mode_setting_title">Screenshot mode</string>
    <string name="manual_screenshot_mode_setting_summary">Save battery life by scanning screenshots instead of auto detecting. This setting has to be enabled for Android KitKat and below. Warning! In this mode the GoIV button does not auto appear</string>
    <string name="delete_screenshots_setting_title">Delete screenshots</string>
    <string name="delete_screenshots_setting_summary">Automatically delete screenshots taken by GoIV</string>
    <string name="copy_to_clipboard_setting_title">Copy smart nickname to clipboard</string>
    <string name="copy_to_clipboard_setting_summary_new" formatted="false">Add information to your copy &amp; paste clipboard on full pokemon scan (Press the button).</string>
    <string name="send_crash_reports_setting_title">Send crash reports</string>
    <string name="send_crash_reports_setting_summary">Help the developers improve the application by sending anonymous crash-related information to them and completely anonymous usage stats</string>
    <string name="auto_update_setting_title">Auto-update</string>
    <string name="auto_update_setting_summary">Automatically check for updates when the app is being used</string>
    <string name="check_for_update_setting_title">Check for update now</string>
    <string name="check_for_update_setting_summary">See if an update is available</string>
    <string name="scan_pokemon_failed">Scanning failed, please scroll up and try again!</string>
    <string name="see_all">See All</string>
    <string name="powerup_calc_instructions">Power up and evolution calculation\nDrag the level slider to view different predictions</string>
    <string name="evolution">Evo</string>
    <string name="level">Level</string>
    <string name="level_acronym">LVL</string>
    <string name="level_num">Level %1$s</string>
    <string name="possible_iv_combinations" tools:ignore="PluralsCandidate">"%1$d possible IV combinations"</string>
    <string name="check_cp_or_level">Something went wrong! Please check that the input values were correct, and that GoIV has the right trainer level in the launch screen.</string>
    <string name="appraisal">Appraisal</string>
    <string name="appraisal_refining">Additional Refining</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="stamina_hp">HP</string>
    <string name="missing_inputs">CP and HP are required.</string>
    <string name="update_check_failed">An error occurred while checking for an update. Please check your internet connection</string>
    <string name="up_to_date">Your app is up-to-date</string>
    <string name="checking_for_update">Checking for update…</string>
    <string name="ongoing_update">An update for GoIV is already being downloaded</string>
    <string name="iv_perfect" formatted="false">% Perfect</string>
    <string name="wrong_pokemon_name_input">" was not found."</string>
    <string name="min">MIN</string>
    <string name="avg">AVG</string>
    <string name="max">MAX</string>
    <string name="atk">ATK</string>
    <string name="def">DEF</string>
    <string name="sta">STA</string>
    <string name="iv" translatable="false">IV</string>
    <string name="iv_button_exact_result_preview_format" translatable="false">%1$s\nIV: %2$d%%</string>
    <string name="iv_button_range_result_preview_format" translatable="false">%1$s\nIV: %2$d - %3$d%%</string>
    <string name="percent" translatable="false">%d%%</string>
    <string name="unknown_percent" translatable="false">"?%"</string>
    <string name="hp_expanded_box">HP</string>
    <string name="perfection_explainer">The \% shows the difference between your monster and a one that\'s 15/15/15.\n\nThe number in parenthesis is how much CP is loses compared to a 15/15/15.</string>
    <string name="pokespam">PokéSpam</string>
    <string name="pokespam_formatted_message">%1$d (%2$d rows + %3$d more)</string>
    <string name="pokespam_formatted_message2">%1$d (%2$d rows)</string>
    <string name="candy">Candy</string>
    <string name="stardust">Stardust</string>
    <string name="pokespam_not_available">Not Available</string>
    <string name="pokespam_setting_title">Show how many you can evolve</string>
    <string name="pokespam_setting_summary">This feature enables scanning for candy amount and allows you to see how many monsters you can evolve, useful for use with lucky egg</string>
    <string name="token_pokemon_gender_symbol">Gender symbol</string>
    <string name="token_pokemon_gender_letter">Gender letter</string>
    <string name="token_pokemonname">Name</string>
    <string name="token_moveset_initials">Moves initials</string>
    <string name="clipboard_modifier_preview">Preview</string>
    <string name="position_handler_toast">Drag the window by this handler to relocate it.</string>
    <string name="clipboard_no_token_selected">Please choose a token to add from the scrollable list.</string>
    <string name="expanded_appraisal_default_setting_title">Expanded appraisal opened by default</string>
    <string name="expanded_appraisal_default_setting_summary">Automatically expand the full appraisal checkbox menu</string>
    <string name="showtranslatedpokemonname_setting_title">Show translated monster name</string>
    <string name="showtranslatedpokemonname_setting_summary">Display translated monster name on GoIV but use its English name for OCR. This is for when the game app is in English but user\'s native language is not</string>
    <string name="pause_goiv_notification">Pause</string>
    <string name="clipboard_copy_toast">Copied %s to clipboard</string>
    <string name="no_clipboard_preview">No preview available</string>
    <string name="copy_to_clip_single_setting">Copy differently on single result</string>
    <string name="copy_to_clip_single_setting_summary">Allows you to define another setting for Copy to clipboard in Edit which will show a different result when a scan returns a single possibility.</string>
    <string name="copy_to_clip_perfectiv_setting">Copy differently when IV is 100%</string>
    <string name="copy_to_clip_perfectiv_setting_summary">Allows you to define another setting for Copy to clipboard in Edit which will show a different result when a scan returns a 100% result.</string>
    <string name="copy_to_clip_zeroiv_setting">Use 100% Copy to clipboard for 0% result</string>
    <string name="copy_to_clip_zeroiv_setting_summary">Allows you to use the Copy to clipboard for 100% result for a scan that returns a 0% result. When disabled, either the single result scan or the multiple result scan is used.</string>
    <string name="view_credits">View credits</string>
    <string name="view_credits_summary">View application credits, used open source projects and thanks</string>
    <string name="title_activity_credits">CreditsActivity</string>
    <string name="app_credits_title">Credits</string>
    <string name="view_credits_button">viewCredits</string>
    <string name="copy_to_clipboard_setting_key" translatable="false">copyToClipboard</string>
    <string name="copy_to_clipboard_perfect_iv_setting_key" translatable="false">copyToClipboardPerfectIv</string>
    <string name="manual_screenshot_mode_key" translatable="false">manualScreenshotMode</string>
    <string name="android_sub5_warning">GoIV has detected that your phone does not have the MediaProjection API, which is used to automatically show the IV scan button. This might be fixed by updating your phone to Android 5 or above. The app will lock itself to screenshot mode to avoid crashing. You can use GoIV by manually triggering a screenshot, which most devices does by holding home+power for a short duration. We apologize for the inconvenience.</string>
    <string name="copy_to_clip_show_toast_setting_summary">Show a preview of what is copied to the clipboard in a small popup</string>
    <string name="copy_to_clip_show_toast_setting">Show clipboard preview popup</string>
    <string name="autoAppraisalScanDelay_title">Auto appraisal delay</string>
    <string name="mv4">not likely headway</string>
    <string name="mv3">above average</string>
    <string name="mv2">caught attention</string>
    <string name="mv1">wonder breathtaking</string>
    <string name="ms4">not out of\nthe norm</string>
    <string name="ms3">trending..\npositive</string>
    <string name="ms2">impress..\nmust say</string>
    <string name="ms1">exceed..\nincred..</string>
    <string name="recalibrate_goiv_notification">Recalibrate</string>
    <string name="recalibration_description">Recalibration enhances GoIV\'s performance by dynamically finding optimal scan locations for your phone.</string>
    <string name="scan_optimization_notice_text">You have not run scan calibration. It\'s recommended to run this optimization on all devices.</string>
    <string name="scan_optimization_screen_ratio_warning">GoIV has detected that your screen is not standard. You\'ll most likely need to perform screen calibration for GoIV to work.</string>
    <string name="scan_optimization_outdated_warning">Your calibration data is outdated. Please run screen calibration again to enjoy the latest features!</string>
    <string name="recalibration_video_tutorial">Recalibration video tutorial</string>
    <string name="table_header_move_fast">Fast</string>
    <string name="table_header_move_charge">Charge</string>
    <string name="table_header_attack">Atk</string>
    <string name="table_header_defense">Def</string>
</resources>