<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:layout_marginBottom="12dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">



        <CheckBox
            android:id="@+id/appraisalRange4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/importantText"
            android:textSize="12sp"
            android:text="@string/mv1"/>



        <CheckBox
            android:id="@+id/attCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/importantText"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:text="@string/attack"/>

        <CheckBox
            android:id="@+id/appraisalStat4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/importantText"
            android:textSize="12sp"
            android:text="@string/ms1"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/appraisalRange3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/importantText"
            android:textSize="12sp"
            android:text="@string/mv2"/>


        <CheckBox
            android:id="@+id/defCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/importantText"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:text="@string/defense"/>

        <CheckBox
            android:id="@+id/appraisalStat3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/importantText"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:text="@string/ms2"/>



    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/appraisalRange2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/importantText"
            android:textSize="12sp"
            android:text="@string/mv3"/>


        <CheckBox
            android:id="@+id/staCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/importantText"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:text="@string/stamina_hp"/>

        <CheckBox
            android:id="@+id/appraisalStat2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/importantText"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:text="@string/ms3"/>




    </LinearLayout>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/appraisalRange1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/importantText"
            android:textSize="12sp"
            android:text="@string/mv4"/>




        <!--placeholder to get correct height    -->
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            android:textSize="12sp"
            android:text="invis"/>



        <CheckBox
            android:id="@+id/appraisalStat1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/importantText"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:text="@string/ms4"/>


    </LinearLayout>




</LinearLayout>