<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center|bottom"
    android:alpha="225">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="6dp">

        <TextView
            android:id="@+id/allPosAttH"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#222"
            android:text="@string/attack"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/allPosDefH"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#222"
            android:text="@string/defense"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/allPosStaH"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#222"
            android:text="@string/stamina_hp"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/allPosPercentH"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#222"
            android:text="@string/iv_perfect"
            android:layout_weight="1"
            android:gravity="center"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/unimportantText"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/close" />

    </LinearLayout>

</LinearLayout>