<?xml version="1.0" encoding="utf-8"?>

<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_fast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:paddingLeft="4dp"
        android:paddingTop="2dp"
        android:paddingRight="4dp"
        android:paddingBottom="2dp"
        android:textAlignment="textStart"
        android:maxLines="1"
        android:ellipsize="end"
        tools:text="@string/table_header_move_fast" />

    <TextView
        android:id="@+id/text_charge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:paddingLeft="4dp"
        android:paddingTop="2dp"
        android:paddingRight="4dp"
        android:paddingBottom="2dp"
        android:textAlignment="textStart"
        android:maxLines="1"
        android:ellipsize="end"
        tools:text="@string/table_header_move_charge" />

    <TextView
        android:id="@+id/text_attack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:paddingLeft="4dp"
        android:paddingTop="2dp"
        android:paddingRight="4dp"
        android:paddingBottom="2dp"
        android:textAlignment="textEnd"
        android:maxLines="1"
        android:ellipsize="end"
        tools:text="@string/table_header_attack" />

    <TextView
        android:id="@+id/text_defense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:paddingLeft="4dp"
        android:paddingTop="2dp"
        android:paddingRight="4dp"
        android:paddingBottom="2dp"
        android:textAlignment="textEnd"
        android:maxLines="1"
        android:ellipsize="end"
        tools:text="@string/table_header_defense" />

</TableRow>