<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/mainScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:fadeScrollbars="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="28dp"
        android:paddingRight="28dp"
        android:paddingTop="16dp"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFF"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_recalibration"
                android:textAlignment="center"
                android:textSize="22sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ddd"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/recalibration_description" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/optimizationWarningLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="#FFF"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notice"
                android:textAlignment="center"
                android:textSize="22sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ddd"/>

            <TextView
                android:id="@+id/neverRunOptimizationWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/scan_optimization_notice_text"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/shouldRunOptimizationAgainWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/scan_optimization_outdated_warning"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/nonStandardScreenWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/scan_optimization_screen_ratio_warning"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

        <Button
            android:id="@+id/recalibrationHelpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/recalibration_video_tutorial" />

        <LinearLayout
            android:id="@+id/optimizationVideoTutorialLayout"
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="gone"
            tools:visibility="visible">

            <WebView
                android:id="@+id/optimizationVideoTutorial"
                android:layout_width="320dp"
                android:layout_height="480dp"
                android:focusable="true" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>